--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="/style/dist/style.css">
+    <script src="/script/script.js" defer></script>
 
 </head>
 <body>
@@ -14,17 +15,17 @@
             <div class="wrapper-logo">
                 <img src="/img/logo.png" alt="">
             </div>
-            <nav>
-                <a href="">Home page</a>
-                <a href="">Login</a>
-                <a href="">Registrace</a>
-            </nav>
             <div class="wrapper-humburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
         </div>
+        <nav>
+            <a href="">Home page</a>
+            <a href="">Login</a>
+            <a href="">Registrace</a>
+        </nav>
     </header>
     <main>
 
