--- a/index.html
+++ b/index.html
@@ -6,25 +6,45 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="/style/dist/style.css">
+    <!-- Musíte pro script.js nastavit defer, díky tomu se kód čte až na konci. Díky tomu funguje querry selektory v js -->
     <script src="/script/script.js" defer></script>
-
 </head>
 <body>
     <header>
+        <!-- Wrapper dáváme kvůli tomu, aby na velkých monitorech nebyl header moc roztáhlý
+             Obecně se bere maximální šířka cca 1300px
+        -->
         <div class="wrapper">
+            <!-- 
+                Zde je lepší si všechny sekce dát na itemy v divech, aby se dobře s nima dělalo přes display flex
+                Využívejte přehlednost v kódu pomocí class, pište první rodiče a pak potomka, přes stylus/SCSS můžeme vnořovat lépe selektory a kód je čistější
+             -->
             <div class="wrapper-logo">
                 <img src="/img/logo.png" alt="">
             </div>
-            <div class="wrapper-humburger">
+            <!--
+                Zde vytváříme ikonu hamburgeru, který je rozanimovaný
+                Je lepší si udělat čárky pomocí spanu, protože se pak dobře mohou rozanimovat
+                Nechme spany prázný, protože grafikcou podobu jím dáváme pomocí css
+            -->
+            <div class="wrapper-hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
         </div>
+        <!-- 
+            Jedíný nav je mimo wrapper, důvod je takový, aby se na mobilním zařízení schovával pod wrapper.
+            Pokud bychom to chtěli pod header, aby se schovával, je to těžší varianta, má konflikt s headrem, pokud je nav jako absolute
+            Na PC verze se pak mění z-index a přizpůsobuje se na prostředek a itemy v navu pak ovládáme pomocí displey flexu
+         -->            
         <nav>
-            <a href="">Home page</a>
-            <a href="">Login</a>
-            <a href="">Registrace</a>
+            <!--
+                # Je prázdný odkaz, bude nás odkazovat na jednu na stejnou stránku
+            -->
+            <a href="#">Home page</a>
+            <a href="#">Login</a>
+            <a href="#">Register</a>
         </nav>
     </header>
     <main>
